# ground_control

./: CMakeLists.txt  api.lua  imgui.ini  main.lua  requirements.txt  todo.txt
include/gui/: gui.hpp  gui_log.hpp  gui_main.hpp
lib/gdcl/: CMakeLists.txt
lib/gdcl/include/gdcl/: bot.h  gdcl.h  input.h  rs.h  script.h  timer.h  util.h
lib/gdcl/include/gdcl/net/: net.h  net_nrf24l01.h  net_serial.h  net_stream_writer.h  packets.h
lib/gdcl/include/gdcl/rs/: rs.h
lib/gdcl/src/gdcl/: bot.cpp  input.cpp  rs.cpp  script.cpp  timer.cpp  util.cpp
lib/gdcl/src/gdcl/net/: net.cpp  net_nrf24l01.cpp  net_serial.cpp  net_stream_writer.cpp
lib/gdcl/src/gdcl/rs/: rs.cpp
lib/imgui/: CMakeLists.txt
lib/libstem_gamepad/: CMakeLists.txt
lib/lua/.github/workflows/: build-windows.yml
lib/serialib/: CMakeLists.txt
lua/: config.lua  drive.lua  input.lua  main.lua  test.lua
src/: main.cpp  main.cpp.old
src/gui/: gui.cpp  gui_log.cpp
